package shaleva.run_app_proj.datamodels;

public enum RunStatus {
    ACTIVE, FINISHED
}
